--- a/VersaoiOS/WhatsApp Clone/WhatsApp Clone/Base.lproj/Main.storyboard
+++ b/VersaoiOS/WhatsApp Clone/WhatsApp Clone/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
         <!--Login-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="WhatsApp_Clone" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="WhatsApp_Clone" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -55,6 +55,9 @@
                                 <state key="normal" title="Logar">
                                     <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="logar:" destination="BYZ-38-t0r" eventType="touchUpInside" id="O5Z-8F-wlu"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SSQ-Jm-dqV">
                                 <rect key="frame" x="60" y="491" width="200" height="30"/>
@@ -86,15 +89,20 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" title="Login" id="JTH-t1-Sn7"/>
+                    <connections>
+                        <outlet property="fieldEmail" destination="Fsn-eM-x2X" id="7G1-WW-jMh"/>
+                        <outlet property="fieldSenha" destination="L95-8s-baM" id="FOi-5y-hFN"/>
+                        <segue destination="xUe-To-eTi" kind="presentation" identifier="segueLoginAutomatico" id="3e1-cR-qPD"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1111.875" y="117.25352112676056"/>
         </scene>
-        <!--View Controller-->
+        <!--Create Account View Controller-->
         <scene sceneID="uUI-3B-rpl">
             <objects>
-                <viewController id="elR-ZV-t7c" sceneMemberID="viewController">
+                <viewController id="elR-ZV-t7c" customClass="CreateAccountViewController" customModule="WhatsApp_Clone" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5KZ-hv-S73">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -139,6 +147,9 @@
                                 <state key="normal" title="Cadastrar-se">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="register:" destination="elR-ZV-t7c" eventType="touchUpInside" id="f4D-kE-VIc"/>
+                                </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="usuario" translatesAutoresizingMaskIntoConstraints="NO" id="RR9-JE-hBu">
                                 <rect key="frame" x="67.5" y="91" width="185" height="128"/>
@@ -163,10 +174,110 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="bt3-yG-C6B"/>
                     </view>
+                    <connections>
+                        <outlet property="fieldEmail" destination="6eF-H0-T0f" id="biN-m3-siN"/>
+                        <outlet property="fieldName" destination="ENR-ef-MG7" id="lbE-Jl-j2B"/>
+                        <outlet property="fieldPassword" destination="Xi2-qd-XbM" id="AJ7-Ly-UxF"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tak-ps-wEX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1886.25" y="114.08450704225352"/>
+            <point key="canvasLocation" x="1954" y="565"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="Fl0-RK-eEa">
+            <objects>
+                <tabBarController id="xUe-To-eTi" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="gPg-HZ-94h">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="ynh-7r-MRR" kind="relationship" relationship="viewControllers" id="qgZ-yM-vay"/>
+                        <segue destination="Bg0-E5-ceL" kind="relationship" relationship="viewControllers" id="2o1-MY-Cy2"/>
+                        <segue destination="zyK-Be-KO4" kind="relationship" relationship="viewControllers" id="Emw-Rn-EXc"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HjV-Z2-JIq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2273" y="-188"/>
+        </scene>
+        <!--Conversas-->
+        <scene sceneID="W1B-bW-3Ns">
+            <objects>
+                <viewController title="Conversas" id="ynh-7r-MRR" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="PDr-uM-9CV">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Conversas" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="E1o-7u-gVD">
+                                <rect key="frame" x="112" y="256" width="97" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="azh-sI-fpR"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Conversas" image="conversas" id="SBi-9P-DeD"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rk6-X9-fv8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3270" y="-532"/>
+        </scene>
+        <!--Contatos-->
+        <scene sceneID="6GB-3z-jCq">
+            <objects>
+                <viewController id="Bg0-E5-ceL" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="eXO-tk-5jD">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Contatos" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="X9u-NZ-PEd">
+                                <rect key="frame" x="112" y="269" width="97" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="6vB-2t-mjS"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Contatos" image="contatos" id="B0o-UE-zfv"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NL7-Pu-cW8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3264" y="200"/>
+        </scene>
+        <!--Ajustes-->
+        <scene sceneID="SRj-pS-188">
+            <objects>
+                <viewController id="zyK-Be-KO4" customClass="AjustesViewController" customModule="WhatsApp_Clone" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="0jE-ui-YuM">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ud7-R7-iQ4">
+                                <rect key="frame" x="122" y="269" width="76" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Deslogar"/>
+                                <connections>
+                                    <action selector="deslogar:" destination="zyK-Be-KO4" eventType="touchUpInside" id="7f2-v4-S6M"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="NAx-zL-c01"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Ajustes" image="ajustes" id="vhi-iO-Ayw"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ns3-f2-yg4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4121.25" y="25.35211267605634"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="RDV-WI-7vm">
@@ -188,6 +299,9 @@
         </scene>
     </scenes>
     <resources>
+        <image name="ajustes" width="30" height="30"/>
+        <image name="contatos" width="30" height="30"/>
+        <image name="conversas" width="30" height="30"/>
         <image name="logo" width="416" height="339"/>
         <image name="usuario" width="256" height="192"/>
     </resources>
